chore: added loading indicator to library items chore: added default icons to library items/recently added cards when no images load chore: fixed css for audio cover images being stretched in library chore: added a testing subr route for testing conponents fix: fix session cards not pulling up IP info when ip lookup is enabled

--- a/src/pages/css/lastplayed.css
+++ b/src/pages/css/lastplayed.css
@@ -47,6 +47,10 @@
   width: 220px !important;
 }
 
+.audio {
+  height: 150px !important;
+}
+
 .last-card-banner {
   width: 150px;
   height: 220px;
